# simple-maniopt

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cc
include/maniopt/: matrix.h  retruction.h  search_step_size.h  vector.h
src/: CMakeLists.txt  matrix.cc  retruction.cc  vector.cc
